--- a/src/App.css
+++ b/src/App.css
@@ -112,7 +112,7 @@ section {
 }
 
 .preaction {
-  margin-bottom: 20px;
+  margin: 100px 0;
   display: flex;
   justify-content: center;
   align-items: center;
