--- a/src/App.css
+++ b/src/App.css
@@ -58,6 +58,7 @@ body {
   display: flex;
   justify-content: space-between;
   align-items: center;
+  position: relative;
 }
 
 nav {
@@ -112,7 +113,7 @@ section {
 }
 
 .preaction {
-  margin: 10px 0;
+  margin: 20px 0;
   display: flex;
   justify-content: center;
   align-items: center;
@@ -289,10 +290,107 @@ h3 {
   border-top: 1px solid #eaeaea;
 }
 
+.hamburger-button {
+  display: none;
+  background: none;
+  border: none;
+  cursor: pointer;
+  padding: 20px;
+  z-index: 1002;
+}
+
+.hamburger-button span {
+  display: block;
+  width: 25px;
+  height: 3px;
+  background-color: var(--text-color);
+  margin: 5px 0;
+  transition: 0.4s;
+}
+
+.hamburger-button.open span:nth-child(1) {
+  transform: rotate(-45deg) translate(-5px, 6px);
+}
+
+.hamburger-button.open span:nth-child(2) {
+  opacity: 0;
+}
+
+.hamburger-button.open span:nth-child(3) {
+  transform: rotate(45deg) translate(-5px, -6px);
+}
+
+.mobile-menu {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(255, 255, 255, 0.8);
+  backdrop-filter: blur(10px);
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  z-index: 1001;
+  opacity: 0;
+  pointer-events: none;
+  transition: opacity 0.3s ease;
+}
+
+.mobile-menu.open {
+  opacity: 1;
+  pointer-events: auto;
+}
+
+.mobile-menu nav {
+  display: flex;
+  flex-direction: column;
+  gap: 20px;
+}
+
+.mobile-menu a {
+  font-size: 1.5rem;
+}
+
+.close-button {
+  position: absolute;
+  top: 20px;
+  right: 20px;
+  background: none;
+  border: none;
+  font-size: 2rem;
+  cursor: pointer;
+  z-index: 1003;
+}
+
 @media (max-width: 768px) {
   .header-content {
+    /* flex-direction: column;
+    align-items: center; */
+    min-width: 100%;
+  }
+
+  .header-content nav:not(.mobile-menu nav) {
+    display: none;
+  }
+
+  .hamburger-button {
+    display: block;
+    /* position: absolute;
+    top: 20px;
+    right: 20px; */
+  }
+
+  .mobile-menu nav {
+    display: flex;
     flex-direction: column;
     align-items: center;
+  }
+
+  .mobile-menu a {
+    font-size: 1.5rem;
+    margin: 10px 0;
   }
 
   nav {
