--- a/src/App.css
+++ b/src/App.css
@@ -40,25 +40,22 @@ body {
 
 .header {
   background-color: var(--background-color);
-  padding: 30px 0 0;
-  position: sticky;
+  padding: 20px 0;
+  position: fixed;
   top: 0;
+  left: 0;
+  right: 0;
   z-index: 1000;
-  width: 100%;
-  display: flex;
-  justify-content: center;
+  /* box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1); */
 }
 
 .header-content {
-  width: 100%;
-  max-width: 1500px;
-  min-width: 800px;
+  max-width: 1200px;
   margin: 0 auto;
   padding: 0 20px;
   display: flex;
   justify-content: space-between;
   align-items: center;
-  position: relative;
 }
 
 nav {
@@ -103,6 +100,7 @@ main {
   justify-content: flex-start;
   align-items: center;
   padding-top: 40px;
+  margin-top: 100px;
 }
 
 section {
@@ -110,6 +108,51 @@ section {
   max-width: 800px;
   margin-bottom: 70px;
   text-align: center;
+}
+
+.home-container {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: space-between;
+  height: calc(
+    100vh - 200px
+  ); /* Ajustez en fonction de la hauteur de votre header */
+  padding: 2rem;
+}
+
+.logo-large {
+  max-width: 100%;
+  margin-bottom: 2rem;
+}
+
+.logo-large img {
+  width: 50%;
+  height: auto;
+}
+
+.contact-email {
+  font-size: 1.2rem;
+  color: var(--link-color);
+  text-decoration: none;
+  transition: color 0.3s ease;
+}
+
+.logo-small {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+.logo-small img {
+  width: 50px;
+  height: auto;
+  margin-bottom: 0.5rem;
+}
+
+.logo-small span {
+  font-size: 0.9rem;
+  font-weight: bold;
 }
 
 .preaction {
@@ -122,8 +165,8 @@ section {
 
 .logoFoot {
   margin-right: 15px;
-  height: 100px;
-  max-width: 100%;
+  height: 60px;
+  max-width: 30%;
 }
 
 .regire {
@@ -132,13 +175,17 @@ section {
   padding-left: 15px;
 }
 
+.regire h1 {
+  font-size: 0px;
+}
+
 .regire::before {
   content: "";
   position: absolute;
   left: 0;
   top: 50%;
   transform: translateY(-50%);
-  height: 80%;
+  height: 70%;
   width: 2px;
   background-color: #333333;
 }
@@ -163,7 +210,7 @@ h3 {
 }
 
 .hero-title {
-  font-size: 3rem;
+  font-size: 3 rem;
   font-weight: 700;
   margin-bottom: 20px;
   color: var(--primary-color);
@@ -291,14 +338,12 @@ h3 {
 }
 
 .hamburger-button {
+  outline: none;
   display: none;
   background: none;
   border: none;
   cursor: pointer;
-  padding: 20px;
-  /* right: 20px;
-  top: 50%;
-  transform: translateY(-50%); */
+  padding: 10px;
   z-index: 1002;
 }
 
@@ -309,6 +354,14 @@ h3 {
   background-color: var(--text-color);
   margin: 5px 0;
   transition: 0.4s;
+}
+
+.hamburger-button:focus {
+  outline: none; /* Assure que l'outline est supprimé même au focus */
+}
+
+.hamburger-button:focus span {
+  box-shadow: 0 0 0 2px rgba(0, 0, 0, 0.1);
 }
 
 .hamburger-button.open span:nth-child(1) {
@@ -325,17 +378,20 @@ h3 {
 
 .mobile-menu {
   position: fixed;
-  top: 0;
+  top: 80px;
+  /* top:50px; */
   left: 0;
   width: 100%;
-  height: 100%;
+  height: calc(100% - 60px);
   background-color: rgba(255, 255, 255, 0.8);
   backdrop-filter: blur(10px);
   display: flex;
+  z-index: 1001;
+  padding: 20px;
+  box-shadow: 0 5px 10px rgba(0, 0, 0, 0.1);
   flex-direction: column;
   justify-content: center;
   align-items: center;
-  z-index: 1001;
   opacity: 0;
   /* pointer-events: none; */
   visibility: hidden;
@@ -385,9 +441,10 @@ h3 {
 
   .hamburger-button {
     display: block;
-    /* position: absolute;
-    top: 20px;
-    right: 20px; */
+  }
+
+  .route-title {
+    display: block;
   }
 
   .mobile-menu nav {
@@ -445,7 +502,7 @@ h3 {
   }
 }
 
-@media (max-width: 540px) {
+/* @media (max-width: 540px) {
   .header-content {
     min-width: 100%;
     flex-direction: column;
@@ -513,4 +570,4 @@ h3 {
   .regire {
     padding-left: 0;
   }
-}
+} */
