--- a/src/App.css
+++ b/src/App.css
@@ -99,14 +99,26 @@ main {
   flex-direction: column;
   justify-content: flex-start;
   align-items: center;
-  padding-top: 40px;
-  margin-top: 100px;
+  padding: 45px 20px 20px; /* Ajout de padding horizontal */
+  margin-top: 10px;
+  min-height: calc(
+    100vh - 60px
+  ); /* Ajustez 60px selon la hauteur de votre header */
+  width: 100%;
+  max-width: 1200px; /* ou la largeur maximale que vous souhaitez pour votre contenu */
+  margin-left: auto;
+  margin-right: auto;
+  box-sizing: border-box;
+}
+
+main > * {
+  width: 100%;
+  max-width: 100%;
 }
 
 section {
   width: 100%;
   max-width: 800px;
-  margin-bottom: 30px;
   text-align: center;
 }
 
@@ -121,14 +133,26 @@ section {
   padding: 2rem;
 }
 
+.home-container a {
+  margin: 20px 0 0;
+}
+
 .logo-large {
-  max-width: 100%;
-  margin-bottom: 2rem;
+  width: 100%;
+  max-width: 500px; /* Ajustez selon la taille de votre logo */
+  margin-bottom: 50px;
 }
 
 .logo-large img {
   width: 50%;
   height: auto;
+}
+
+.hero-bottom-content {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  width: 100%;
 }
 
 .contact-email {
@@ -156,11 +180,10 @@ section {
 }
 
 .preaction {
-  margin: 20px 0;
   display: flex;
-  justify-content: center;
   align-items: center;
-  flex-wrap: wrap;
+  justify-content: center;
+  margin-top: 20px;
 }
 
 .logoFoot {
@@ -171,6 +194,7 @@ section {
 
 .regire {
   margin: 0;
+  font-size: 3rem;
   position: relative;
   padding-left: 15px;
 }
@@ -206,14 +230,22 @@ h3 {
 }
 
 .hero {
-  padding: 60px 0;
+  /* padding: 60px 0; */
+  height: 100vh;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  padding: 20px;
+  box-sizing: border-box;
 }
 
-.hero-title {
-  font-size: 3 rem;
-  font-weight: 700;
-  margin-bottom: 20px;
-  color: var(--primary-color);
+.hero-content {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: space-between;
+  height: 100%;
+  max-height: 600px; /* Ajustez cette valeur selon vos besoins */
 }
 
 .hero-subtitle {
@@ -239,6 +271,10 @@ h3 {
   margin-left: auto;
   margin-right: auto;
   margin-bottom: 20px;
+}
+
+.about {
+  padding: 50px 0;
 }
 
 .services {
@@ -308,6 +344,7 @@ h3 {
   background-color: #f7f7f7;
   padding: 60px 20px;
   border-radius: 8px;
+  margin-bottom: 50px;
 }
 
 .cta-buttons {
@@ -442,6 +479,10 @@ h3 {
 }
 
 @media (max-width: 768px) {
+  main {
+    padding: 30px 15px 15px;
+  }
+
   .header-content {
     /* flex-direction: column;
     align-items: center; */
@@ -621,3 +662,24 @@ h3 {
     padding-left: 0;
   }
 } */
+
+@media (max-width: 480px) {
+  main {
+    padding: 20px 10px 10px;
+  }
+
+  .logo-large {
+    max-width: 200px; /* Réduire la taille du logo sur les très petits écrans */
+  }
+
+  .hero-subtitle {
+    font-size: 1rem;
+  }
+  .logoFoot {
+    height: 40px;
+    max-width: 50%;
+  }
+  .regire {
+    font-size: 1.4rem;
+  }
+}
