--- a/src/App.css
+++ b/src/App.css
@@ -138,9 +138,13 @@ section {
 }
 
 .logo-large {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
   width: 100%;
   max-width: 500px; /* Ajustez selon la taille de votre logo */
-  margin-bottom: 50px;
+  /* margin-bottom: 50px; */
 }
 
 .logo-large img {
@@ -149,6 +153,10 @@ section {
 }
 
 .hero-bottom-content {
+  position: absolute;
+  bottom: 20px;
+  left: 0;
+  right: 0;
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -244,6 +252,7 @@ h3 {
   flex-direction: column;
   align-items: center;
   justify-content: space-between;
+  width: 100%;
   height: 100%;
   max-height: 600px; /* Ajustez cette valeur selon vos besoins */
 }
@@ -593,6 +602,15 @@ h3 {
   }
 }
 
+@media (max-height: 600px) {
+  .logo-large {
+    max-width: 200px; /* Réduire la taille du logo sur les écrans de faible hauteur */
+  }
+
+  .hero-bottom-content {
+    bottom: 10px;
+  }
+}
 /* @media (max-width: 540px) {
   .header-content {
     min-width: 100%;
@@ -669,12 +687,13 @@ h3 {
   }
 
   .logo-large {
-    max-width: 200px; /* Réduire la taille du logo sur les très petits écrans */
+    max-width: 350px; /* Réduire la taille du logo sur les très petits écrans */
   }
-
+  
   .hero-subtitle {
     font-size: 1rem;
   }
+  
   .logoFoot {
     height: 40px;
     max-width: 50%;
