--- a/src/App.css
+++ b/src/App.css
@@ -139,7 +139,7 @@ section {
 
 .logo-large {
   position: absolute;
-  top: 50%;
+  top: 35%;
   left: 50%;
   transform: translate(-50%, -50%);
   width: 100%;
@@ -157,6 +157,7 @@ section {
   bottom: 20px;
   left: 0;
   right: 0;
+  top: 80%;
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -600,6 +601,10 @@ h3 {
     width: 100%;
     margin: 10px 0;
   }
+
+  .hero-bottom-content {
+    top:70%;
+  }
 }
 
 @media (max-height: 600px) {
@@ -689,11 +694,11 @@ h3 {
   .logo-large {
     max-width: 300px; /* Réduire la taille du logo sur les très petits écrans */
   }
-  
+
   .hero-subtitle {
     font-size: 1rem;
   }
-  
+
   .logoFoot {
     height: 40px;
     max-width: 50%;
