--- a/src/App.css
+++ b/src/App.css
@@ -295,7 +295,7 @@ h3 {
   display: grid;
   grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
   gap: 40px;
-  margin-top: 40px;
+  /* margin-top: 40px; */
 }
 
 .service-item {
@@ -338,6 +338,10 @@ h3 {
 
 .service-title {
   cursor: default;
+  font-size: 1.5rem;
+  margin: 0;
+  padding: 20px;
+  color: var(--primary-color);
 }
 
 .toggle-icon {
@@ -568,6 +572,8 @@ h3 {
     display: flex;
     justify-content: space-between;
     align-items: center;
+    margin-left: 0px;
+    text-align: center;
   }
 
   .toggle-icon {
@@ -575,7 +581,7 @@ h3 {
     font-size: 2rem;
     line-height: 1;
     transition: transform 0.3s ease;
-    padding-left: 10px;
+    padding-left: 20px;
   }
 
   .toggle-icon.open {
@@ -585,12 +591,19 @@ h3 {
   .service-list {
     max-height: 1000px; /* Ajustez cette valeur selon vos besoins */
     opacity: 1;
+    padding-right: 10px;
   }
 
   .service-list.closed {
     max-height: 0;
     opacity: 0;
     overflow: hidden;
+  }
+  ul.service-list.open{
+    padding-right:60px ;
+    text-align:center;
+    max-width: fit-content;
+    max-width: 95%;
   }
 
   .cta {
