--- a/src/App.css
+++ b/src/App.css
@@ -664,12 +664,13 @@ h3 {
   }
 
   .accordion-content ul{
-    padding-right: 20px ;
+    padding-right: 15px ;
+    padding-left: -00px;
   }
 
   .accordion-title {
     font-size: 1rem; /* Réduction de la taille de la police */
-    max-width: calc(100% - 60px); /* Ajustement de la largeur maximale */
+    max-width: calc(100% - 35px); /* Ajustement de la largeur maximale */
   }
 
   .accordion-icon {
